Fixed some bugs with display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -148,3 +148,48 @@ section {
     font-size: 2em;
     margin-right: 5px;
 }
+
+@media (max-width: 500px) {
+    .body {
+        height: 100%;
+        width: 100vw;
+        overflow-y: hidden;
+        overflow-y: scroll;
+    }
+    .nav {
+        background-color: #333;
+        overflow: auto;
+        position: fixed;
+        width: 100%;
+        height: 53px;
+        padding: 0;
+        margin: 0;
+        top: 0;
+    }
+
+    .wrapper {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100vw;
+        overflow-x: hidden;
+        background: rgba(1, 1, 1, 0.6);
+    }
+
+    section {
+        height: 100vh;
+        width: 100vw;
+        color: #fff;
+        text-align: center;
+    }
+
+    .about {
+        width: 100vw;
+        margin-left: 0;
+    }
+
+    .contact {
+        width: 50vw;
+        margin-left: 25vw;
+    }
+}
